--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
         "react/jsx-tag-spacing": "off",
         "eol-last": "off",
         "comma-dangle": "off",
-        "prefer-destructuring": "off"
+        "prefer-destructuring": "off",
+        "linebreak-style": "off"
     }
 }
